--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "highlight.js": "^11.3.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
+    "md5-node": "^1.0.1",
     "mitt": "^2.1.0",
     "node-dev": "^7.0.0",
     "normalize-wheel": "^1.0.1",
